# headsup-analyzer

./: Cargo.toml  README.md  range.json  test
.devcontainer/: devcontainer.json
src/: action.rs  analyse.rs  argparse.rs  board.rs  cards.rs  core.rs  drawhand.rs  duel.rs  hand_wrapper.rs  lib.rs  madehand.rs  main.rs  player.rs  position.rs  range.rs  straight.rs
src/core/: action.rs  board.rs  cards.rs  drawhand.rs  hand_wrapper.rs  madehand.rs  player.rs  position.rs  range.rs
src/duel/: duel.rs
src/hand/: analyse.rs  hand.rs
