[package]
name = "headsup-analyzer"
version = "0.1.0"
authors = ["Akira Kobori <private.beats@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
rust_poker = "0.1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
